--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_PORT=5432
 DB_BASE=delivery_db
 DB_USER=postgres
 DB_PASSWORD=root
+
+SECRET_KEY = 9z$C&F)H@McQfTjWnZr4u7x!A%D*G-KaNdRgUkXp2s5v8y/B?E(H+MbQeShVmYq3t6w9z$C&F)J@NcRfUjWnZr4u7x!A%D*G-KaPdSgVkYp2s5v8y/B?E(H+MbQeThWm
