--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/storage": "^6.9.4",
     "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
